--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
         <h1>Stewart Hvidston</h1>
         <p>N220 Projects</p>
         <p>Summer 2023</p>
+
+        <h2>Lab 1</h2>
+        <p><a href="labs/lab1/index.html">First Example</a></p>
     </body>
 </html>
