--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Insert Lab 1 Here
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
