--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 
         <h2>Lab 1</h2>
         <p><a href="labs/lab1/index.html">First Example</a></p>
+
+        <h2>Lab 2</h2>
+        <p><a href="labs/lab2.1/">Puck Slide</a></p>
+        <p><a href="labs/lab2.2/">World Wrap</a></p>
+        <p><a href="labs/lab2.3/">Even Larger, Until Not</a></p>
     </body>
 </html>
