--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
         <p><a href="labs/lab2.1/">Puck Slide</a></p>
         <p><a href="labs/lab2.2/">World Wrap</a></p>
         <p><a href="labs/lab2.3/">Even Larger, Until Not</a></p>
+
+        <h2>Lab 3</h2>
+        <p><a href="labs/lab3.1/">FizzBuzz</a></p>
+        <p><a href="labs/lab3.2/">Loop Composition</a></p>
+        <p><a href="labs/lab3.3/">Circles Inside Circles</a></p>
+        
     </body>
 </html>
