--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <p><a href="labs/lab3.1/">FizzBuzz</a></p>
         <p><a href="labs/lab3.2/">Loop Composition</a></p>
         <p><a href="labs/lab3.3/">Circles Inside Circles</a></p>
+
+        <h2>Lab 4</h2>
+        <p><a href="labs/lab4.1/">Neapolitan</a></p>
+        <p><a href="labs/lab4.2/">Dripping Water</a></p>
+        <p><a href="labs/lab4.3/">Click to Drop</a></p>
         
     </body>
 </html>
