--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
         <p><a href="labs/lab4.1/">Neapolitan</a></p>
         <p><a href="labs/lab4.2/">Dripping Water</a></p>
         <p><a href="labs/lab4.3/">Click to Drop</a></p>
+
+        <h2>Lab 5</h2>
+        <p><a href="labs/lab5.1/">Peak Pixels</a></p>
+        <p><a href="labs/lab5.2/">That's a Lot of Div</a></p>
+        <p><a href="labs/lab5.3/">Over and Out</a></p>
         
     </body>
 </html>
