--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <p><a href="labs/lab5.1/">Peak Pixels</a></p>
         <p><a href="labs/lab5.2/">That's a Lot of Div</a></p>
         <p><a href="labs/lab5.3/">Over and Out</a></p>
+
+        <h2>Lab 6</h2>
+        <p><a href="labs/lab6.1/">Battle System</a></p>
+        <p><a href="labs/lab6.2/">Data-driven Display</a></p>
+        <p><a href="labs/lab6.3/">Animated <Object></Object></a></p>
         
     </body>
 </html>
