--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>Lab 6</h2>
         <p><a href="labs/lab6.1/">Battle System</a></p>
         <p><a href="labs/lab6.2/">Data-driven Display</a></p>
-        <p><a href="labs/lab6.3/">Animated <Object></Object></a></p>
+        <p><a href="labs/lab6.3/">Animated Object</a></p>
         
     </body>
 </html>
