--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <p><a href="labs/lab6.1/">Battle System</a></p>
         <p><a href="labs/lab6.2/">Data-driven Display</a></p>
         <p><a href="labs/lab6.3/">Animated Object</a></p>
+
+        <h2>Midterm</h2>
+        <p><a href="midterm/"></a></p>
         
     </body>
 </html>
