--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p><a href="labs/lab6.3/">Animated Object</a></p>
 
         <h2>Midterm</h2>
-        <p><a href="midterm/"></a></p>
+        <p><a href="midterm/">Midterm</a></p>
         
     </body>
 </html>
