--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
         <h2>Midterm</h2>
         <p><a href="midterm/">Midterm</a></p>
+
+        <h2>Lab 7</h2>
+        <p><a href="labs/lab7.1/">Greeter</a></p>
+        <p><a href="labs/lab7.2/">Tip-Calculator</a></p>
+        <p><a href="labs/lab7.3/">Distance Calculator</a></p>
         
     </body>
 </html>
