--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <p><a href="labs/lab7.1/">Greeter</a></p>
         <p><a href="labs/lab7.2/">Tip-Calculator</a></p>
         <p><a href="labs/lab7.3/">Distance Calculator</a></p>
+
+        <h2>Lab 8</h2>
+        <p><a href="labs/lab8.1/">Divisible By 7</a></p>
+        <p><a href="labs/lab8.2/">Click for Random</a></p>
+        <p><a href="labs/lab8.3/">Chase Mouse</a></p>
         
     </body>
 </html>
