--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
+    <head>
+        <title>N220 Labs</title>
+    </head>
     <body>
         <h1>Stewart Hvidston</h1>
-        <p>N220 Projects</p>
+        <p>N220 Labs</p>
         <p>Summer 2023</p>
 
         <h2>Lab 1</h2>
@@ -44,6 +47,11 @@
         <p><a href="labs/lab8.1/">Divisible By 7</a></p>
         <p><a href="labs/lab8.2/">Click for Random</a></p>
         <p><a href="labs/lab8.3/">Chase Mouse</a></p>
+
+        <h2>Lab 9</h2>
+        <p><a href="labs/lab9.1/">It's Just Average</a></p>
+        <p><a href="labs/lab9.2/">Bad Word Checker</a></p>
+        <p><a href="labs/lab9.3/">Make Divs</a></p>
         
     </body>
 </html>
