--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         <p><a href="labs/lab9.1/">It's Just Average</a></p>
         <p><a href="labs/lab9.2/">Bad Word Checker</a></p>
         <p><a href="labs/lab9.3/">Make Divs</a></p>
+
+        <h2>Lab 10</h2>
+        <p><a href="labs/lab10.1/">Color Changer</a></p>
+        <p><a href="labs/lab10.2/">Color Mixer</a></p>
+        <p><a href="labs/lab10.3/">Flash Cards</a></p>
         
     </body>
 </html>
