--- a/labs/lab10.3/index.html
+++ b/labs/lab10.3/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <button class="question-button" data-answer="Indianapolis">What is the capital of Indiana?</button>
-  <button class="question-button" data-answer="Paris">What is the capital of France?</button>
-  <button class="question-button" data-answer="Tokyo">What is the capital of Japan?</button>
+  <button class="question-button" data-answer="In the Heat of the Night">What film won the Oscar for best picture in 1967?</button>
+  <button class="question-button" data-answer="20.1 mph">What is the air speed veloicity of a swallow?</button>
   <div id="answerDiv"></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
