--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <p>N220 Labs</p>
         <p>Summer 2023</p>
 
+        <h2>Final Project</h2>
+        <p><a href="finalProject/">Breakout</a></p>
+
+        <h2>Midterm</h2>
+        <p><a href="midterm/">Midterm</a></p>
+
         <h2>Lab 1</h2>
         <p><a href="labs/lab1/index.html">First Example</a></p>
 
@@ -35,9 +41,6 @@
         <p><a href="labs/lab6.2/">Data-driven Display</a></p>
         <p><a href="labs/lab6.3/">Animated Object</a></p>
 
-        <h2>Midterm</h2>
-        <p><a href="midterm/">Midterm</a></p>
-
         <h2>Lab 7</h2>
         <p><a href="labs/lab7.1/">Greeter</a></p>
         <p><a href="labs/lab7.2/">Tip-Calculator</a></p>
@@ -57,6 +60,5 @@
         <p><a href="labs/lab10.1/">Color Changer</a></p>
         <p><a href="labs/lab10.2/">Color Mixer</a></p>
         <p><a href="labs/lab10.3/">Flash Cards</a></p>
-        
     </body>
 </html>
